# nid-system

./: .gitignore  CMakeLists.txt
model_training/Himanshu_KDD+ Dataset/: Logsitic_regression.ipynb
model_training/Himanshu_KDD+ Dataset/.ipynb_checkpoints/: preprocessing_models-checkpoint.ipynb  xgboost-checkpoint.ipynb
model_training/Himanshu_KDD+ Dataset/logistic_regression/: logistic_regression_model.pkl  test_report.txt
model_training/Himanshu_KDD+ Dataset/preprocessing_pipeline/: attack_label_encoder.pkl
model_training/Himanshu_KDD+ Dataset/svm/: test_report.txt  train_report.txt
model_training/Himanshu_KDD+ Dataset/xgboost/: test_report.txt  train_report.txt
notebooks/: DL_training.ipynb  RNN_training.ipynb  cic_preprocessing.ipynb  cic_train_test.ipynb
notebooks/Himanshu_KDD+ Dataset/: Logsitic_regression.ipynb  auto_encoders.ipynb  auto_encoders_trying_out.ipynb  convert_to_csv.ipynb  jpt.ipynb  kisim_logistic.ipynb  random_forest.ipynb  svm.ipynb
notebooks/Himanshu_KDD+ Dataset/.ipynb_checkpoints/: Logsitic_regression-checkpoint.ipynb  jpt-checkpoint.ipynb  kisim_logistic-checkpoint.ipynb  random_forest-checkpoint.ipynb  svm-checkpoint.ipynb  xgboost-checkpoint.ipynb
notebooks/Himanshu_KDD+ Dataset/logistic_regression/: test_final_report_thresholds.txt  test_report_thresholds.txt  train_report.txt  train_report_thresholds.txt
notebooks/Himanshu_KDD+ Dataset/preprocessing_pipeline/: pipeline.pkl
notebooks/Himanshu_KDD+ Dataset/random_forest/: logistic_regression_model.pkl  test_final_report_thresholds.txt
src/preprocessing/: packet_parser.cpp
(+13 files in other folders)
